--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -87,9 +87,11 @@
   <ItemGroup>
     <ClCompile Include="Entities.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Player.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Entities.h" />
+    <ClInclude Include="Player.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
